# cambre

./: .gitignore  CMakeLists.txt
docs/: Doxyfile
src/: Application.cpp  Application.hpp  ApplicationException.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  InputManager.cpp  InputManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  main.cpp
src/camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp
src/commands/: CameraCommands.cpp  CameraCommands.hpp  Command.cpp  Command.hpp
src/events/: Event.hpp  EventObserver.cpp  EventObserver.hpp
src/interface/: DynamicObjectInterface.hpp  LifecycleInterface.cpp  LifecycleInterface.hpp  MeshInterface.hpp  RenderInterface.hpp  UpdateInterface.hpp
src/render/: RenderInterface.cpp  RenderInterface.hpp  TriangleRender.cpp  TriangleRender.hpp  TriangleRenderer.cpp
src/render/examples/: CubeRenderer.cpp  CubeRenderer.hpp  TriangleRenderer.cpp  TriangleRenderer.hpp
src/render/shaders/: chunk.f.glsl  chunk.v.glsl  default.v.glsl
src/shaders/: default.f.glsl  fragment.glsl
src/utils/: CheckError.cpp  CheckError.hpp  PrintVector.cpp  PrintVector.hpp  Specialization.hpp
src/world/: Block.hpp  Chunk.cpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  Region.cpp  Region.hpp
